Fix an overlapping issue when a widget is in full screen mode

--- a/src/web/components/widget/index.styl
+++ b/src/web/components/widget/index.styl
@@ -12,7 +12,7 @@
 
     &.widget-fullscreen {
         position: fixed;
-        top: 0;
+        top: 50px;
         left: 0;
         z-index: 1050;
         width: 100%;
